tests/pure/impure_std.sy
start :: pu do
    a :: random'
end

// error: Cannot call impure functions from pure functions
